--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ Pure White - #FFF
   padding: 0;
   box-sizing: border-box;
   font-family: "DM Sans", sans-serif;
-  line-height: 1.6;
+  line-height: 1.7;
 }
 
 .container {
@@ -33,8 +33,9 @@ h1 {
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 40px;
   font-weight: bold;
+  letter-spacing: 4px;
 }
 
 h3 {
@@ -50,6 +51,7 @@ h4 {
 p {
   font-size: 15px;
   font-weight: 400;
+  letter-spacing: 1px;
 }
 
 a {
@@ -94,6 +96,8 @@ nav ul {
   display: flex;
   align-items: center;
   justify-content: center;
+  background: white;
+  z-index: 2;
 }
 
 nav ul li a {
@@ -131,6 +135,66 @@ nav ul li a:hover {
 .close-mobile {
   display: none;
   cursor: pointer;
+}
+
+/* 
+
+
+
+
+
+
+
+CREATE AND SHARE
+
+
+
+
+
+
+
+
+*/
+
+#create-and-share {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.text-dark {
+  background: black;
+  color: white;
+  width: 40%;
+  height: 650px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0rem 4.5rem;
+}
+
+.text-dark p {
+  margin-top: 1.3rem;
+  margin-bottom: 2rem;
+  opacity: 0.6;
+}
+
+.get-an-invite-text-link {
+  display: flex;
+  align-items: center;
+}
+.get-an-invite-text-link a {
+  color: #fff;
+}
+
+.arrow-img {
+  margin-left: 15px;
+}
+
+.dock-man-img {
+  background: url(./img/create-and-share.jpg) no-repeat center center/cover;
+  width: 60%;
+  height: 650px;
 }
 
 /* 
@@ -238,5 +302,25 @@ Media Queries
     font: 15px;
     font-weight: bold;
     padding: 7px 30px;
+  }
+
+  #create-and-share {
+    flex-direction: column-reverse;
+  }
+
+  .text-dark {
+    width: 100%;
+    height: 500px;
+    padding: 2rem;
+  }
+
+  .text-dark h2 {
+    font-size: 32px;
+  }
+
+  .dock-man-img {
+    background: url(./img/create-and-share.jpg) no-repeat center center/cover;
+    width: 100%;
+    height: 650px;
   }
 }
