--- a/style.css
+++ b/style.css
@@ -220,6 +220,25 @@ Media Queries
   .nav-btn {
     width: 120px;
   }
+
+  #create-and-share {
+    display: flex;
+    align-items: center;
+    margin-top: 2rem;
+  }
+
+  .text-dark {
+    padding: 2rem;
+    height: 580px;
+  }
+
+  .text-dark h2 {
+    font-size: 32px;
+  }
+
+  .dock-man-img {
+    height: 580px;
+  }
 }
 
 @media only screen and (max-width: 820px) {
