--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ CREATE AND SHARE
   display: flex;
   align-items: center;
 }
-.get-an-invite-text-link a {
+.get-an-invite-text-link-dark a {
   color: #fff;
 }
 
@@ -197,6 +197,59 @@ CREATE AND SHARE
   height: 650px;
 }
 
+/* 
+
+
+
+
+
+
+
+BEAUTIFUL STORIES
+
+
+
+
+
+
+
+
+*/
+
+#beautiful-stories {
+  display: flex;
+  align-items: center;
+}
+
+.laptop-img {
+  background: url(./img/beautiful-stories.jpg) no-repeat center center/cover;
+  width: 60%;
+  height: 650px;
+}
+.text-light {
+  background: white;
+  color: black;
+  width: 40%;
+  height: 650px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0rem 4.5rem;
+}
+
+.text-light p {
+  margin-top: 1.3rem;
+  margin-bottom: 2rem;
+  opacity: 0.6;
+}
+
+.get-an-invite-text-link {
+  display: flex;
+  align-items: center;
+}
+.get-an-invite-text-link a {
+  color: #000;
+}
 /* 
 
 
@@ -237,6 +290,11 @@ Media Queries
   }
 
   .dock-man-img {
+    width: 100%;
+  }
+
+  .text-light {
+    padding: 2rem;
     height: 580px;
   }
 }
@@ -338,8 +396,31 @@ Media Queries
   }
 
   .dock-man-img {
-    background: url(./img/create-and-share.jpg) no-repeat center center/cover;
     width: 100%;
     height: 650px;
+  }
+
+  #beautiful-stories {
+    flex-direction: column;
+  }
+
+  .laptop-img {
+    width: 100%;
+    height: 650px;
+  }
+  .text-light {
+    width: 100%;
+    height: 500px;
+    padding: 2rem;
+  }
+
+  .text-light h2 {
+    font-size: 32px;
+  }
+
+  .text-light p {
+    margin-top: 1.3rem;
+    margin-bottom: 2rem;
+    opacity: 0.6;
   }
 }
