--- a/style.css
+++ b/style.css
@@ -387,6 +387,48 @@ STORIES
 
 
 
+Home Features
+
+
+
+
+
+
+
+
+*/
+
+#home-features {
+  margin-top: 7rem;
+  margin-bottom: 10rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+  padding: 0 6rem;
+}
+
+.home-feature-img {
+  margin-bottom: 2rem;
+}
+
+.home-feature h3 {
+  margin-bottom: 2rem;
+}
+
+.middle-home-feature {
+  margin: 2rem;
+}
+
+/* 
+
+
+
+
+
+
+
 Media Queries
 
 
@@ -513,6 +555,16 @@ Media Queries
   #stories {
     grid-template-columns: repeat(2, 1fr);
   }
+  #home-features {
+    margin-top: 7rem;
+    grid-template-columns: repeat(1, 1fr);
+    text-align: center;
+    padding: 0 7rem;
+  }
+
+  .home-feature {
+    margin: 2rem 0rem;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -573,5 +625,9 @@ Media Queries
 
   #stories {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  #home-features {
+    padding: 0 2rem;
   }
 }
