--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ STORIES
 }
 
 .story:hover {
-  padding-bottom: 1rem;
+  paddinge-bottom: 1rem;
   cursor: pointer;
 }
 
@@ -438,6 +438,11 @@ footer {
 
 footer a {
   color: white;
+  transition: opacity 0.2s ease-in-out;
+}
+
+footer a:hover {
+  opacity: 0.6;
 }
 
 .footer-logo-socials-container {
