padding to dark mobile text

--- a/style.css
+++ b/style.css
@@ -579,7 +579,7 @@ STORIES PAGE
   display: none;
   background: #000;
   color: #fff;
-  padding: 0 2rem;
+  padding: 2.5rem 2rem;
 }
 
 .mobile-stories-h4 {
