--- a/style.css
+++ b/style.css
@@ -628,6 +628,21 @@ FEATURES
   height: 650px;
 }
 
+#beta-showcase {
+  background: linear-gradient(rgba(20, 20, 20, 0.7), rgba(20, 20, 20, 0.7)),
+    url(./img/bg-beta.jpg) no-repeat center center/cover;
+  height: 280px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 7rem;
+}
+
+.beta-showcase-heading {
+  width: 60%;
+}
+
 /* 
 
 
@@ -877,6 +892,11 @@ Media Queries
   .picture-img {
     width: 50%;
   }
+
+  #beta-showcase {
+    height: 350px;
+    padding: 0 2rem;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -961,6 +981,24 @@ Media Queries
     background: url(./img/mobile-features.jpg) no-repeat center center/cover;
     width: 100%;
     height: 650px;
+  }
+
+  #beta-showcase {
+    background: url(./img/mobile-bg-beta.jpg) no-repeat center center/cover;
+    height: 280px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 2rem;
+    text-align: center;
+  }
+
+  .beta-showcase-heading {
+    width: 100%;
+    font-size: 32px;
+    margin-bottom: 2rem;
   }
 
   footer {
