--- a/style.css
+++ b/style.css
@@ -650,6 +650,30 @@ FEATURES
 
 
 
+Pricing
+
+
+
+
+
+
+
+
+*/
+
+.photographer-img {
+  background: url(./img/pricing-hero.jpg) no-repeat center center/cover;
+  width: 60%;
+  height: 650px;
+}
+
+/* 
+
+
+
+
+
+
 FOOTER
 
 
@@ -999,6 +1023,11 @@ Media Queries
     width: 100%;
     font-size: 32px;
     margin-bottom: 2rem;
+  }
+
+  .photographer-img {
+    width: 100%;
+    height: 650px;
   }
 
   footer {
