--- a/style.css
+++ b/style.css
@@ -1,17 +1,3 @@
-/* 
-
-Colors
-
-Main Accent - HEX / RGB / HSL :
-#FFC593, 	rgb(255, 197, 147),	28°, 100%, 79%#BC7198, 	rgb(188, 113, 152),	329°, 36%, 59%#5A77FF, 	rgb(90, 119, 255)	229°, 100%, 67%
-
-Pure Black - #000
-Light Grey - #DFDFDF
-Pure White - #FFF
-
-
-*/
-
 * {
   margin: 0;
   padding: 0;
@@ -667,6 +653,145 @@ Pricing
   height: 650px;
 }
 
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.toggle-switch-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 6rem;
+}
+
+.toggle-switch-container p {
+  margin: 0 1.5rem;
+}
+
+.pricing-boxes {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5rem;
+  margin-bottom: 7rem;
+  text-align: center;
+  padding: 0 5rem;
+}
+
+.price-box {
+  background: #f5f5f5;
+  height: 405px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.price-box.dark {
+  background: #000;
+  height: 460px;
+  color: #fff;
+  margin: 0 1rem;
+}
+
+.price-box-text {
+  padding: 0 4rem;
+}
+
+.price-box-title {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.price-box-description {
+  margin-bottom: 2rem;
+}
+
+.price-box-price {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.price-box-btn-dark {
+  background: #000;
+  color: #fff;
+  width: 270px;
+  height: 40px;
+  margin-top: 2rem;
+  padding: 7px 0;
+  font-weight: 700;
+}
+
+.price-box-btn-light {
+  background: #fff;
+  color: #000;
+  width: 270px;
+  height: 40px;
+  margin-top: 2rem;
+  padding: 7px 0;
+  font-weight: 700;
+}
+
 /* 
 
 
@@ -891,6 +1016,22 @@ Media Queries
   .stories-text-dark-container {
     display: block;
   }
+
+  .pricing-boxes {
+    padding: 0rem;
+    flex-direction: column;
+  }
+
+  .price-box {
+    height: 600px;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .price-box.dark {
+    height: 600px;
+    width: 100%;
+  }
 }
 
 @media screen and (min-device-width: 601px) and (max-device-width: 767px) {
@@ -1028,6 +1169,22 @@ Media Queries
   .photographer-img {
     width: 100%;
     height: 650px;
+  }
+
+  .pricing-boxes {
+    padding: 0rem;
+    flex-direction: column;
+  }
+
+  .price-box {
+    height: 600px;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .price-box.dark {
+    height: 600px;
+    width: 100%;
   }
 
   footer {
