--- a/style.css
+++ b/style.css
@@ -739,16 +739,20 @@ input:checked + .slider:before {
 
 .price-box {
   background: #f5f5f5;
-  height: 405px;
+  height: 450px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  padding-bottom: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 2rem;
 }
 
 .price-box.dark {
   background: #000;
-  height: 460px;
+  height: 515px;
   color: #fff;
   margin: 0 1rem;
 }
@@ -1032,6 +1036,13 @@ Media Queries
     height: 600px;
     width: 100%;
   }
+
+  .price-box-description {
+    margin-bottom: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+  }
 }
 
 @media screen and (min-device-width: 601px) and (max-device-width: 767px) {
@@ -1184,6 +1195,10 @@ Media Queries
 
   .price-box.dark {
     height: 600px;
+    width: 100%;
+  }
+
+  .price-box-description {
     width: 100%;
   }
 
