--- a/style.css
+++ b/style.css
@@ -833,6 +833,52 @@ input:checked + .slider:before {
 .price-per-year.show-yearly-price {
   display: block;
 }
+
+#compare {
+  margin: 7rem 0rem;
+}
+
+#compare h2 {
+  text-align: center;
+}
+
+table {
+  text-align: center;
+  margin: 3rem auto;
+  border-collapse: collapse;
+}
+
+th {
+  padding-bottom: 1rem;
+}
+
+tr {
+  border-bottom: 1pt solid black;
+}
+
+tr:nth-child(2),
+tr:nth-child(3),
+tr:nth-child(4),
+tr:nth-child(5),
+tr:nth-child(6),
+tr:nth-child(7),
+tr:nth-child(8),
+tr:nth-child(9) {
+  border-bottom: 1pt solid #dfdfdf;
+}
+
+td {
+  padding: 1rem 4rem;
+}
+
+.black-line {
+  height: 1px;
+  background: #000;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* 
 
 
