--- a/style.css
+++ b/style.css
@@ -1157,10 +1157,6 @@ Media Queries
     margin-right: auto;
     width: 60%;
   }
-
-  .mobile-features {
-    display: none;
-  }
 }
 
 @media screen and (min-device-width: 601px) and (max-device-width: 767px) {
@@ -1196,7 +1192,7 @@ Media Queries
     display: none;
   }
 
-  .mobile-table {
+  .mobile-features {
     display: block;
   }
 
@@ -1341,6 +1337,10 @@ Media Queries
 
   .desktop-table {
     display: none;
+  }
+
+  .mobile-features {
+    display: block;
   }
 
   .mobile-table-heading {
