--- a/style.css
+++ b/style.css
@@ -491,7 +491,8 @@ Home Features
   grid-template-columns: repeat(3, 1fr);
   text-align: center;
   padding: 0 6rem;
-  grid-row-gap: 4rem;
+  grid-row-gap: 6rem;
+  grid-column-gap: 2rem;
 }
 
 .home-feature-img {
